--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ db/*.sqlite3
 /public/cache
 /public/stylesheets/compiled
 /public/system/*
+/public/attachments/*
 /spec/tmp/*
 /cache
 /capybara*
