--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,27 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: tbookingdb_development
+  username: jeffery
+  password: 123456asd
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: tbookingdb_test
+  username: jeffery
+  password: 123456asd
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: tbookingdb_production
+  username: jeffery
+  password: 123456asd
