--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ db/*.sqlite3
 .redcar/
 .sass-cache
 /config/config.yml
+/config/database.yml
 /coverage.data
 /coverage/
 /db/*.javadb/
@@ -94,3 +95,4 @@ rsa_public_key.pem
 # Ignore test folder
 /test/*
 app/assets/images/*
+
