Dynamic display in index

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,7 @@
 AllCops:
-  RunRailsCops: true
+  # RunRailsCops: true
+  Rails:
+    Enabled: true
   Include:
     - '**/Gemfile'
     - '**/Rakefile'
